--- a/nginx-log/logstash/pipeline/00-input.conf
+++ b/nginx-log/logstash/pipeline/00-input.conf
@@ -1,20 +1,44 @@
 input {
         beats {
-		type => "beats"
+                type => "beats"
                 port => 5044
         }
 
 
         udp {
-		type => "syslog"
+                type => "syslog"
                 port => 5045
- 		codec => "json"                                                                          
+                codec => "json"
 
         }
 }
 
 
-    
+
+
+filter {
+  if "access" in [type] {
+    grok {
+      match => { "message" => '%{IPORHOST:host_name} - %{IPV4:remote_ip} - %{DATA:user_name} \[%{HTTPDATE:access_time}\] - "%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}" %{NUMBER:response_code} %{NUMBER:body_sent_bytes} - "%{DATA:referrer}" "%{DATA:user_agent}" - cache: %{DATA:cache_status} \[%{HTTPDATE:time_local}\] - content_type: %{DATA:content_type}$' }
+      remove_field => "message"
+    }
+
+
+
+  }
+
+ else if "error" in [type] {
+    grok {
+      match => { "message" => '%{YEAR}/%{MONTHNUM}/%{MONTHDAY} %{TIME} \[%{LOGLEVEL:level}\] %{INT:process_id}#%{INT:thread_id}: \*(%{INT:connection_id})? %{GREEDYDATA:description}' }
+      remove_field => "message"
+    }
+  }
+}
+
+
+
+
+
 
 
 output {
@@ -39,11 +63,9 @@ else {
                 user => admin
                 password => admin
                 index => "%{[@metadata][beat]}-log-nginx-%{[host][hostname]}-%{+YYYY.MM.dd}"
+                #index => "%{[@metadata][beat]}-%{[host][hostname]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
         } # end of elastic
 } # end of else
 
 } # end of output
-
-
-
 
